# haplotag

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bashrc  job.sh  vcpkg.json
Pilot-1/H4/: Plate_BC_7.txt
data/: I1_001.fastq  I2_001.fastq  R1_001.fastq  R2_001.fastq  test.fastq  test_H4_I1_001.fastq  test_H4_R1_001.fastq  test_H4_R2_001.fastq  test_H4_R4_001.fastq  test_I2_001.fastq  test_R3_001.fastq
device/: LICENSE  device.hpp  mutex.hpp  pool.hpp  queue.hpp
fastq/: barcode.hpp  fastq.hpp  fuzzy_matching.hpp  reader.hpp  splitter.hpp  writer.hpp
fastq_cuda/: CMakeLists.txt  main.cu
flua/: falloc.hpp
haplo_demult/: CMakeLists.txt  H4_demult_fastq_with_clipping_7bp-plateBC.cpp  H4_demult_fastq_with_clipping_8bp-plateBC.cpp  H4_demult_fastq_with_clipping_noPlateBC.cpp  compile.sh  demult_fastq.cpp  notes
pigz/: pigz.c
scratch/hb-1000G_str/local/haplo_demult/: H4_demult_fastq_with_clipping_noPlateBC.cpp
scratch/hb-1000G_str/pilot/: Plate_BC_8.txt  README-ll_pilot.txt  README.txt
src/: H4.json  bench.hpp  fastq_H4.cpp  fastq_barcode.cpp  fastq_cat.cpp  fastq_cp.cpp  fastq_fuzzy.cpp  fastq_gen.cpp  fastq_h4.cpp  fastq_paste.cpp  fastq_read.cpp  fastq_splitter.cpp  fastq_write.cpp
test/: bench.sh  habrok_bench.sh  habrok_bench_job.sh  habrok_h4.json  test_H4.json  test_pilot-1.sh
